fix: Work flow form invisible

--- a/clients/portal/modules/work-flow/style.scss
+++ b/clients/portal/modules/work-flow/style.scss
@@ -3,7 +3,6 @@ rect {
 }
 
 .flow-editor-drawer {
-  left: unset !important;
   .drawer-container {
     @apply rounded-tl-none rounded-tr-none left-auto right-0 #{!important};
     width: 500px !important;
